<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.add.SetupParticipantFragment"
    android:id="@+id/layout_setup_participant_fragment"
    android:orientation="vertical">

<LinearLayout

    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_weight="20" >
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragment_setup_participant_room_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"

        >

        <Button
            android:id="@+id/fragment_setup_participant_button_validate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"

            android:text="@string/validate"
            android:textSize="@dimen/button_text_size"/>

    </LinearLayout>
</LinearLayout>